Added DnD character page, edited CSS to fit

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                             <a href="bio.html">Bio</a>
                             <a href="music.html">Music</a>
                             <a href="projects.html">Projects</a>
+                            <a href="rebeccadnd.html">DnD: Rebecca</a>
                         </div>
                     </div>
                     
